<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/o_erl_orderInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:ael_expanded="true"
            app:ael_duration="500"
            app:ael_interpolator="decelerate"
            app:ael_orientation="vertical"
            android:background="@color/editColor"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:elevation="2dp"
                    android:id="@+id/of_cancelOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_danger"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="8dp">
                    <ImageView
                        android:id="@+id/of_cancelOrderIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_remove"
                        android:tint="#3d2f22"/>
                    <TextView
                        android:id="@+id/of_cancelOrderText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  PRZERWIJ ZAMÓWIENIE"
                        android:textSize="16sp"
                        android:textColor="#3d2f22"/>
                </LinearLayout>

                <View android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="#28ffffff" />
                <View android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="#28000000"
                    android:layout_marginBottom="16dp"/>

                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipient"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/backgroundColor"/>
                        <TextView
                            android:paddingStart="8dp"
                            android:id="@+id/of_orderRecipient"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/backgroundColor"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/departure_date"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/backgroundColor"/>
                        <TextView
                            android:paddingStart="8sp"
                            android:id="@+id/of_orderDepartureDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/backgroundColor"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/target_location"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/backgroundColor"/>
                        <TextView
                            android:paddingStart="8sp"
                            android:id="@+id/of_orderTargetLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/backgroundColor"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/positions"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/backgroundColor"/>
                        <TextView
                            android:paddingStart="8sp"
                            android:id="@+id/of_orderPositions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/backgroundColor"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_id"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/backgroundColor"/>
                        <TextView
                            android:paddingStart="8sp"
                            android:id="@+id/of_orderId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/backgroundColor"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pallets"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/backgroundColor"/>
                        <TextView
                            android:paddingStart="8sp"
                            android:id="@+id/of_orderPallets"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/backgroundColor"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_marginTop="16dp"
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="#28ffffff" />
                <View android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="#28000000"
                    />
            </LinearLayout>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
        <LinearLayout
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center"
            android:id="@+id/o_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="0.8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Produkty"
                android:textColor="@color/backgroundColor"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/of_took_product"
                android:gravity="end"
                android:layout_weight="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/backgroundColor"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/of_rv_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/product_item"
                android:clipToPadding="false"
                android:paddingBottom="104dp"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:elevation="1dp">

        <ImageView
            android:id="@+id/of_bar_code"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:padding="20dp"
            android:background="@drawable/ic_barcode_background"/>

        <LinearLayout
            android:id="@+id/of_input_layout"
            android:visibility="gone"
            android:translationZ="-1dp"
            android:layout_width="250dp"
            android:layout_height="46dp"
            android:layout_marginLeft="-36dp"
            android:background="@color/buttonBackground"
            android:orientation="horizontal"
            android:gravity="center">
            <EditText
                android:id="@+id/of_inputCode"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background"
                android:textSize="18sp"
                android:hint="Wprowadź miejsce paletowe"
                android:fontFamily="sans-serif-light"
                android:inputType="number"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/of_open_input"
            android:translationZ="-2dp"
            android:layout_marginStart="-16dp"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:background="@drawable/barcode_background"
            android:gravity="end">
            <ImageView
                android:id="@+id/of_open_icon"
                android:translationZ="-1dp"
                android:layout_width="42dp"
                android:layout_height="46dp"
                android:src="@drawable/ic_arrowright"
                android:tint="@color/iconColor"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>